fixed merge and insert a plot

--- a/network_modeling/chapter_PP.tex
+++ b/network_modeling/chapter_PP.tex
@@ -270,7 +270,7 @@ Assumptions:
 	\item Retransmission until success (backlogged)
 	\item No buffering $\rightarrow$ upper bound to the performance of a realistic system
 	\item Infinite set of nodes $\rightarrow$ lower bound
-\end{itemize}
+\end{enumerate}
 The last two assumptions provide a system with $n$ packets in it and $n$ nodes ready to process them (each node receives 1 packet).
 In a real system, a node may have more than 1 packet.
 
