--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -44,18 +44,12 @@
 % support for glossary and acronyms
 \usepackage[acronym]{glossaries}
 \newacronym[plural=MCs,firstplural=Markov Chains (MCs)]{mc}{MC}{Markov Chain}
-<<<<<<< HEAD
 \newacronym{rtt}{RTT}{Round Trip Time}
-=======
->>>>>>> master
 \newacronym[plural=STs,firstplural=Stopping times (STs)]{st}{ST}{Stopping Time}
 \newacronym{kt}{KT}{Karlin-Taylor}
 \newacronym{rv}{r.v.}{random variable (r.v.)}
 \newacronym[plural=PPs,firstplural=Poisson Processes]{pp}{PP}{Poisson Process}
-<<<<<<< HEAD
-=======
 \newacronym{geraf}{GeRaF}{Geographic Random Forwarding}
->>>>>>> master
 
 % Costumization of theorem style
 \newtheoremstyle{theoremdd}% name of the style to be used
@@ -156,7 +150,6 @@
 \begin{titlepage} %------------------------------ TITLE PAGE
 \begin{center}
 
-
 \hspace{0.5cm}
 
 \emph{\Large{NETWORK MODELING}} \\
@@ -164,32 +157,16 @@
 \includegraphics[width=9cm]{Zorzilla}\\
 \vspace{0.5cm}
 {written with love by\par}
-{\Large Ettore Mariotti, Andrea Pittaro, Enrico Lovisotto, Davide Peron, Federico Mason, Lorenza Prospero, Cristina Gava, Ciprian Matteo\par}
-%\vspace{0.2cm} \linespread{1} \scshape{\large{\bfseries{(subtitle)}}}
+{\Large Ettore Mariotti, Andrea Pittaro, Enrico Lovisotto, Davide Peron, Federico Mason, Lorenza Prospero, Cristina Gava, Matteo Ciprian\par}
 \end{center}
 
-% **** SE VOGLIAMO FARE I FIGHI
-% \vfill
-% \begin{normalsize}
-% \begin{flushleft}
-%   \hspace{145pt} \textit{Editors} \\
-%   \vspace{5pt}
-%   \hspace{15pt} \large{\textbf{Andrea PITTARO}} \hspace{50pt} \large{\textbf{Enrico LOVISOTTO}}\\
-%   \hspace{15pt}\large{\textbf{Ettore MARIOTTI}}\\
-% \end{flushleft}
-% \end{normalsize}
 
 \vfill
 \begin{center}
-\hspace{-0.2cm}
+\noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
 \textsc{Academic Year 2016/2017}
-\line(1, 0){360}
-
-\textsc{Anno Accademico 2016/2017}
 \end{center}
 \end{titlepage}
-
-%\input{dedica-citazione.tex}
 
 \begingroup %------------------------------ CONTENTS
   \makeatletter
@@ -201,9 +178,9 @@
 \mainmatter
 \input{introduction.tex}
 \input{chapter_2.tex}
-\input{gbn_analysis.tex}
 \input{chapter_PP.tex}
 \input{renewalProc.tex}
+\input{gbn_analysis.tex}
 \input{chapter_SN.tex}
 
 \end{document}
